<resources>
    <string name="app_name">DayDone</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="go_back">Go back</string>
    <string name="add_a_new_task">Add a new task</string>
    <string name="title">Title</string>
    <string name="enter_task_title">Enter task title</string>
    <string name="description_optional">Description (Optional)</string>
    <string name="enter_description">Enter description</string>
    <string name="deadline">Deadline</string>
    <string name="select_date_and_time">Select date and time</string>
    <string name="save_task">Save Task</string>
    <string name="overdue">Overdue</string>
</resources>